--- a/.gitignore
+++ b/.gitignore
@@ -2,5 +2,5 @@
 # https://git-scm.com/docs/gitignore
 # https://help.github.com/articles/ignoring-files
 # Example .gitignore files: https://github.com/github/gitignore
-/Models/MConnexion.php
+/src/Models/MConnexion.php
 /.idea/
