--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,5 @@
 # https://help.github.com/articles/ignoring-files
 # Example .gitignore files: https://github.com/github/gitignore
 /src/Models/MConnexion.php
+/composer.lock
 /.idea/
